# bio-mcp-queue

./: Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  setup-local.sh
config/: scheduler-examples.env
scripts/: setup-celery.sh  setup-slurm.sh
src/: api.py  celery_app.py
src/bio/: __init__.py  mcp_tools.py  models.py  storage.py
src/bio/schedulers/: __init__.py  base.py  celery_scheduler.py  factory.py  slurm_scheduler.py
src/bio/tasks/: __init__.py  blast.py  fastqc.py
tests/: test_api_schedulers.py  test_schedulers.py
