[project]
name = "bio-mcp-queue"
version = "0.1.0"
description = "Job queue system for long-running bioinformatics tasks"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Bio-MCP Project"}]
license = {text = "MIT"}

dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "minio>=7.2.0",  # S3-compatible object storage
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"